--- a/myweb/bootstrap/pages/Mdetail.html
+++ b/myweb/bootstrap/pages/Mdetail.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panda个人网站</title>
-	<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+	<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<link rel="stylesheet"  href="../css/common.css">
 	<link rel="stylesheet"  href="../css/Mdetail.css">
-	<link href="http://cdn.bootcss.com/Buttons/2.0.0/css/buttons.min.css" rel="stylesheet">
-	<link href="http://cdn.bootcss.com/font-awesome/4.6.1/css/font-awesome.css" rel="stylesheet">
+	<link href="//cdn.bootcss.com/Buttons/2.0.0/css/buttons.min.css" rel="stylesheet">
+	<link href="//cdn.bootcss.com/font-awesome/4.6.1/css/font-awesome.css" rel="stylesheet">
 </head>
 <body>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
