--- a/个人网站模板/index.html
+++ b/个人网站模板/index.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Panda个人网站</title>
-	<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-	<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+	<link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<link rel="stylesheet"  href="css/common.css">
 	<link rel="stylesheet"  href="css/index.css">
 	<script type="text/javascript" src="js/index.js"></script>
