--- a/个人网站模板/pages/blog.html
+++ b/个人网站模板/pages/blog.html
@@ -135,7 +135,7 @@
  	<div class="container-fluid">
     	<div class="container">
 			<div class="row col-md-6 col-md-offset-3 " style="text-align:center">
-				<span>Copyright © 赵晓盼 | 京公网安备11010802014853</span>
+				<span>Copyright © 赵晓盼 |  </span>
 	</div>
     	</div>
     	 	</div>
