--- a/学校参观网站/index.html
+++ b/学校参观网站/index.html
@@ -5,9 +5,9 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-	<script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
+	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body style="background-color: #F5F5F5;">
 <!--header start-->
@@ -53,7 +53,7 @@
 	</div>
 	<div id="mid_right" class="aling-top" >
 		<div class="mid_right1">
-			<h4>国家数字化学习工程技术研究中心</h4>
+			<h4>华南师范大学/h4>
 			<span>（National Engineering Research Center for E-Learning, NERCEL）</span>
 		</div>
 		<div class="mid_right2">
