--- a/学校参观网站/index.html
+++ b/学校参观网站/index.html
@@ -53,7 +53,7 @@
 	</div>
 	<div id="mid_right" class="aling-top" >
 		<div class="mid_right1">
-			<h4>华南师范大学/h4>
+			<h4>华南师范大学</h4>
 			<span>（National Engineering Research Center for E-Learning, NERCEL）</span>
 		</div>
 		<div class="mid_right2">
