--- a/学校参观网站/index.html
+++ b/学校参观网站/index.html
@@ -54,7 +54,7 @@
 	<div id="mid_right" class="aling-top" >
 		<div class="mid_right1">
 			<h4>华南师范大学</h4>
-			<span>（National Engineering Research Center for E-Learning, NERCEL）</span>
+			<span>（South China Normal University）</span>
 		</div>
 		<div class="mid_right2">
 			<img class="img-thumbnail" src="images/nercel.jpg">
