--- a/个人网站模板/common.html
+++ b/个人网站模板/common.html
@@ -3,10 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<script src="//cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
-	<link href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<script src="//cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	
+	<script src="http://cdn.bootcss.com/jquery/3.1.0/jquery.min.js"></script>
+	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<link rel="stylesheet"  href="css/common.css">
 </head>
 <body>
@@ -47,7 +46,7 @@
 							          </ul>
       					  </li>
 				            <li><a href="#">学无止境</a></li>
-				            <li><a href="#">关于我</a></li>
+				            <li><a href="pages/about.html">关于我</a></li>
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
 			         	 </ul>
@@ -79,7 +78,7 @@
  	<div class="container-fluid">
     	<div class="container">
 			<div class="row col-md-6 col-md-offset-3 " style="text-align:center">
-				<span>Copyright © 赵晓盼 | </span>
+				<span>Copyright © 赵晓盼 | 京公网安备11010802014853</span>
 	</div>
     	</div>
     	 	</div>
