--- a/个人网站模板/pages/about.html
+++ b/个人网站模板/pages/about.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>博客</title>
-	<script src="http://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
-	<link href="http://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
-	<script src="http://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+	<script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
+	<link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
+	<script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="../css/about.css">
 	<script type="text/javascript" src="../js/about.js"></script>
 </head>
