--- a/个人网站模板/pages/Mdetail.html
+++ b/个人网站模板/pages/Mdetail.html
@@ -44,7 +44,7 @@
 							            <li><a href="#">企业网站</a></li>
 							          </ul>
       					  </li>
-				            <li><a href="#">生活点滴</a></li>
+				            <li><a href="nav.html">技术导航</a></li>
 				            <li><a href="about.html">关于我</a></li>
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
