--- a/个人网站模板/pages/nav.html
+++ b/个人网站模板/pages/nav.html
@@ -3,10 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>前端技术导航</title>
-	<link rel="stylesheet" href="css/nav.css">
+	<link rel="stylesheet" href="../css/nav.css">
 	<link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
-	<script type="text/javascript" src="js/nav.js"></script>
+	<script type="text/javascript" src="../js/nav.js"></script>
 </head>
 <body style="background-color:#F1F1F1;">
 	<div class="main clearFloat">
