--- a/个人网站模板/common.html
+++ b/个人网站模板/common.html
@@ -46,7 +46,7 @@
 							          </ul>
       					  </li>
 				            <li><a href="#">学无止境</a></li>
-				            <li><a href="pages/about.html">关于我</a></li>
+				            <li><a href="pages/about.html" target="_blank">关于我</a></li>
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
 			         	 </ul>
