--- a/个人网站模板/pages/Mdetail.html
+++ b/个人网站模板/pages/Mdetail.html
@@ -45,7 +45,7 @@
 							          </ul>
       					  </li>
 				            <li><a href="nav.html">技术导航</a></li>
-				            <li><a href="about.html">关于我</a></li>
+				            <li><a href="about.html" target="_blank">关于我</a></li>
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
 			         	 </ul>
