--- a/个人网站模板/index.html
+++ b/个人网站模板/index.html
@@ -44,7 +44,7 @@
 							          </ul>
       					  </li>
 				            <li><a href="pages/nav.html">技术导航</a></li>
-				            <li><a href="pages/about.html">关于我</a></li>
+				            <li><a href="pages/about.html" target="_blank">关于我</a></li>
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
 			         	 </ul>
