--- a/个人网站模板/pages/about.html
+++ b/个人网站模板/pages/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>博客</title>
+	<title>Panda个人网站关于我</title>
 	<script src="https://cdn.bootcss.com/jquery/3.2.0/jquery.min.js"></script>
 	<link href="https://cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css" rel="stylesheet">
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
