--- a/个人网站模板/common.html
+++ b/个人网站模板/common.html
@@ -50,7 +50,12 @@
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
 			         	 </ul>
-			         	 
+			         	 <form class="navbar-form navbar-left">
+        						<div class="form-group">
+         						 <input type="text" class="form-control" placeholder="Search">
+        						</div>
+        						<button type="submit" class="btn btn-default">Submit</button>
+      					</form>
 				         <ul class="nav navbar-nav  navbar-right">
 				           	<li ><a href="pages/login.html"><span class="glyphicon glyphicon-log-in" style="font-size:14px"></span>&nbsp;&nbsp;登录</a></li>
 				            <li><a href="pages/resign.html"><span class="glyphicon glyphicon-edit" style="font-size:14px"></span>&nbsp;&nbsp;注册</a></li>
