--- a/个人网站模板/index.html
+++ b/个人网站模板/index.html
@@ -44,11 +44,11 @@
 							          </ul>
       					  </li>
 				            <li><a href="pages/nav.html">技术导航</a></li>
-				            <li><a href="pages/about.html" target="_blank">关于我</a></li>
+				            <li><a href="pages/about.html">关于我</a></li>
 				            <li><a href="#">留言板</a></li>
 				            <li><a href="#">赞助</a></li>
 			         	 </ul>
-			         	 <form class="navbar-form navbar-left">
+			         	  <form class="navbar-form navbar-left">
         						<div class="form-group">
          						 <input type="text" class="form-control" placeholder="Search">
         						</div>
@@ -294,7 +294,7 @@
  	<div class="container-fluid">
     	<div class="container">
 			<div class="row col-md-6 col-md-offset-3 " style="text-align:center">
-				<span>Copyright © 赵晓盼 | 京公网安备11010802014853</span>
+				<span>Copyright © 赵晓盼 </span>
 	</div>
     	</div>
     	 	</div>
