--- a/个人网站模板/pages/Mdetail.html
+++ b/个人网站模板/pages/Mdetail.html
@@ -34,7 +34,7 @@
 			        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-9">
 			          	<ul class="nav navbar-nav" >
 				           <li ><a href="../index.html">首页</a></li>
-				            <li class="active"><a href="#">博客</a></li>
+				            <li class="active"><a href="blog.html">博客</a></li>
 				            <li class="dropdown">
           						<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">网站模板 <span class="caret"></span>
           						</a>
